# enterprise-invoice-reconciler

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.vertex.example.yml  docker-compose.yml  main.py  pyproject.toml  railway.ai-worker.toml  railway.toml  seed_data.py
.claude/skills/second-brain/: SKILL.md  update_memory.py
.github/workflows/: ci.yml
ai_worker/: activities.py  agent_graph.py  llm_router.py  otel_scrubber.py  security.py  test_dspy_engine.py  worker.py  workflows.py
api_gateway/: demo.py  deps.py  main.py
docs/: RAILWAY.md  project_memory.md
frontend/: .env.example  package-lock.json  package.json  railway.toml
frontend/prisma/: schema.prisma
frontend/src/app/: actions.ts  layout.tsx  page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/components/Dashboard/: BatchTable.tsx  KPICards.tsx  ReviewModal.tsx  UploadWidget.tsx
frontend/src/components/Reports/: FinOpsChart.tsx  FinOpsChartLazy.tsx  FinOpsSummary.tsx  ReportHeader.tsx  mockData.ts
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/shared/: StatCard.tsx
frontend/src/lib/: demo.ts  format.ts
frontend/src/types/: index.ts
mcp_bridge/: erp_mock.db  init_db.py  server.py  test_server.py
mock_data/invoices/: INV-2026-001.txt  INV-2026-002.txt  INV-2026-003.txt  INV-2026-004.txt  INV-2026-005.txt
scripts/: cleanup_demo.sql
shared/: paths.py  pdf_utils.py  schemas.py
tests/: conftest.py  test_dspy_engine.py  test_llm_router.py  test_mcp_server.py  test_security.py
