[project]
name = "enterprise-invoice-reconciler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=3.1.3",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.0",
    "langfuse>=4.0.6",
    "langgraph>=1.1.5",
    "pydantic>=2.12.5",
    "temporalio>=1.24.0",
    "uvicorn>=0.42.0",
]
